releases/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: minio
  name: minio
