releases/minio/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-minio
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
spec:
  redirectScheme:
    scheme: https

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-system
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
  name: minio-minio-secure
  namespace: minio
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio.192.168.0.14.xip.io`)
      kind: Rule
      services:
        - name: minio-http
          port: 80
      middlewares:
        - name: redirect-https-minio
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-system
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
  name: minio-minio
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.192.168.0.14.xip.io`)
      kind: Rule
      services:
        - name: minio-http
          port: 80
  tls:
    certResolver: default
    options: {}
